<resources>
    <string name="app_name">fuel</string>

    <!--    Signup activity string -->
    <string name="hero_text_signup">SignUp</string>
    <string name="hero_text_login">LogIn</string>
    <string name="signup_box1">Fullname</string>
    <string name="signup_box2">Email</string>
    <string name="signup_box3">Username</string>
    <string name="signup_box4">Password</string>
    <string name="btn_register">register</string>

    <!--    Login activity strings -->
    <string name="btn_login">login</string>
    <string name="login_box1">username</string>
    <string name="login_box2">password</string>
    <string name="btn_home_screen_login">login</string>
    <string name="btn_home_screen_signup">signup</string>

    <!--    Home page strings -->
    <string name="quanity">Quantity</string>
    <string name="btn_place_order">Place Order</string>

    <!--    Navigation drawer -->
    <string name="nav_header_title">Hello user</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="petrol">Petrol</string>
    <string name="deisel">Deisel</string>
    <string name="minus">-</string>
    <string name="tanks">Tanks</string>
    <string name="add">+</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="title_activity_maps">Map</string>
</resources>