<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0.2"
        android:text="@string/hero_text_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_style"
            android:drawableRight="@drawable/ic_baseline_perm_contact_calendar_24"
            android:fontFamily="@font/molengo"
            android:hint="@string/signup_box1"
            android:letterSpacing="0.2"
            android:padding="16sp"
            android:textColor="#999999" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_style"
            android:drawableRight="@drawable/ic_baseline_alternate_email_24"
            android:fontFamily="@font/molengo"
            android:hint="@string/signup_box2"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.2"
            android:padding="16sp"
            android:textColor="#999999" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_style"
            android:drawableRight="@drawable/ic_baseline_person_24"
            android:fontFamily="@font/molengo"
            android:hint="@string/signup_box3"
            android:inputType="text"
            android:letterSpacing="0.2"
            android:padding="16sp"
            android:textColor="#999999" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_style"
            android:drawableRight="@drawable/ic_baseline_vpn_key_24"
            android:fontFamily="@font/molengo"
            android:hint="@string/signup_box4"
            android:inputType="textPassword"
            android:letterSpacing="0.2"
            android:padding="16sp"
            android:textColor="#999999" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="#6B9F54FF"
            android:fontFamily="@font/noto_sans_bold"
            android:letterSpacing="0.2"
            android:padding="16dp"
            android:text="@string/btn_register"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.2"
                android:text="Already registerd?"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/login_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:fontFamily="@font/noto_sans_bold"
                android:letterSpacing="0.2"
                android:text="Login"
                android:textColor="@color/secondary"
                android:textSize="13sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>