<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0.3"
        android:text="@string/hero_text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_style"
            android:drawableRight="@drawable/ic_baseline_person_24"
            android:fontFamily="@font/molengo"
            android:hint="@string/login_box1"
            android:letterSpacing="0.2"
            android:padding="16sp"
            android:textColor="#999999" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_style"
            android:drawableRight="@drawable/ic_baseline_lock_24"
            android:fontFamily="@font/molengo"
            android:hint="@string/login_box2"
            android:letterSpacing="0.2"
            android:padding="16sp"
            android:textColor="#999999"
            android:inputType="textPassword"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.2"
                android:lineHeight="20dp"
                android:text="Forgot Password?\nSign Up"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:backgroundTint="#6B9F54FF"
                android:fontFamily="@font/noto_sans_bold"
                android:letterSpacing="0.2"
                android:padding="16dp"
                android:text="@string/btn_login"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>